syntax = "proto3";

option java_generic_services = true;
option java_package = "com.test.proto";
option java_outer_classname = "HelloWorld";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}